// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render correctly 1`] = `
<Component
  placeholders={
    Array [
      <Text />,
    ]
  }
  textKey="mock"
>
  <Component
    textKey="mock"
  >
    <Text>
      <react-native-mock>
        <Component
          key="0"
        >
          <Text>
            <react-native-mock />
          </Text>
        </Component>
         mock
      </react-native-mock>
    </Text>
  </Component>
</Component>
`;

exports[`should replace placeholders correctly 1`] = `
<View>
  <react-native-mock>
    <Component
      key="0"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
     mock
  </react-native-mock>
</View>
`;

exports[`should replace placeholders correctly 2`] = `
<View>
  <react-native-mock>
    <Component
      key="0"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
    mock
  </react-native-mock>
</View>
`;

exports[`should replace placeholders correctly 3`] = `
<View>
  <react-native-mock>
    {12}
     mock
  </react-native-mock>
</View>
`;

exports[`should replace placeholders correctly 4`] = `
<View>
  <react-native-mock>
    <Component
      key="0"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
     mock 
    <Component
      key="1"
    >
      testing
    </Component>
     mock 
    <Component
      key="2"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
  </react-native-mock>
</View>
`;
